@@ -28,6 +28,13 @@ if test "x${datarootdir}" = "x"; then
     AC_SUBST(datarootdir)
 fi
 
+dnl# Try to get SVN revision
+SVNVERSION=`svnversion -c | sed 's/^.*://g' 2>/dev/null || echo 0000`
+if test "$SVNVERSION" = "0000" ; then
+    SVNVERSION=`svnversion 2>/dev/null || echo 0000`
+fi
+AC_SUBST(SVNVERSION)
+
 AC_OUTPUT(Makefile
    warewulf-common.spec
    share/Makefile
