@@ -401,3 +401,8 @@ Fri Mar  9 15:40:26 2012                        Michael Jennings (mej)
 
 Work in progress:  Cleaning up and optimizing MySQL.pm.
 ----------------------------------------------------------------------
+Mon Mar 12 10:47:48 2012                        Michael Jennings (mej)
+
+Fix database.conf permissions.  Try a better technique for getting the
+SVN revision.
+----------------------------------------------------------------------
